Refactor code to use consistent quotation marks in import statements

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,7 @@ h1 {
   line-height: 1.1;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -41,7 +41,7 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 .pop-in {
   animation: popInAnimation 0.5s ease;
