--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,10 +6,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(55 65 81);
+  color: rgba(0, 0, 0, 0.9);
+  background-color: #f4f3f2;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,16 +17,26 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+input,
+textarea,
+select {
+  border: 1px solid #bb0a21;
+  background-color: #f9f9f9;
+  font-weight: 500;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
 }
 
 /* @media (prefers-color-scheme: light) {
